tests/snapshots/snapshot_tests__array_init_both_ends_multiple.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_both_ends_multiple.vmt",
    status: Panic,
    used_instantiations: [],
}
