tests/snapshots/snapshot_tests__array_init_both_ends_multiple_sum.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_both_ends_multiple_sum.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int b Z Z) (- N (+ Z N))) (Read-Int-Int b (- N (+ Z N))))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i i) i) (Read-Int-Int Array-Int-Int!val!1 i))",
    ],
}
